expected/main/core/case/mdovaralt14.err
ERROR: "actual/main/core/case/mdovaralt14.lc", line 9
               Blue  -> Red -- type error, even thought it won't be executed
                        ^
Type mismatch: cannot unify "Proc Unit" with "Rainbow"

ERROR: Aborting after previously reported error

